fixed text overflow

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ a {
     height: 34px;
     font-size: 34px;
     font-weight: lighter;
+    overflow:hidden
 }
 
 #currentInput {
@@ -87,6 +88,7 @@ a {
     height: 67.5px;
     font-size: 67.5px;
     font-weight: lighter;
+    overflow:hidden
 }
 
 #calculator {
